@@ -1,4 +1,4 @@
-.TH texconfig 1 "August 2011" "TeX Live" "TeX Live"
+.TH texconfig 1 "July 2014" "TeX Live" "TeX Live"
 .SH NAME
 texconfig \- configures teTeX or TeX Live
 .LP
@@ -77,10 +77,10 @@ Remove
 .I config.PRINTERNAME
 .TP
 .B dvips mode
-List available MetaFont modes.
+List available Metafont modes.
 .TP
 .B dvips [-P PRINTER] mode MODE
-Change the MetaFont mode to
+Change the Metafont mode to
 .I MODE
 for
 .I PRINTER
